--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.31",
     "expo-status-bar": "~3.0.9",
     "lucide-react-native": "^0.562.0",
